# epydem

./: .gitignore  CLAUDE.md  PR3_CI2_REPLY.md  PR3_CI_REPLY.md  PR3_FIX_MMwR_REPLY.md  PR3_MENTION_REPLY.md  PR3_REPLY.md  PR4_REPLY.md  PR5_UPDATE.md  PR6_ACK.md  PR_ACTIONS_FIX.md  PR_PHASE1.md  PR_PHASE1_DEBATE.md  PR_PHASE2_1.md  PR_PHASE2_DEBATE.md  PR_PHASE3.md  PR_PHASE3_REQUIREMENTS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
epydem/: __init__.py  epiweek.py  formatting.py  incidence.py  summary.py  summary_report.py  time.py  transform.py
tests/: test_epiweek.py  test_incidence.py  test_incidence_phase2_1.py  test_summary.py  test_summary_markdown.py
